Use Collections.unmodifiableList instead of List.copyOf to allow for null values